--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   auto-paint-pro:
     build:
@@ -7,46 +5,16 @@ services:
       dockerfile: Dockerfile
     container_name: auto-paint-pro-app
     ports:
-      - "3002:3000"
-    volumes:
-      # Volume persistente para o banco SQLite
-      - ./data:/app/data
-      # Para desenvolvimento - descomente para hot reload
-      # - .:/app
-      # - /app/node_modules
-    environment:
-      - NODE_ENV=production
-      - PORT=3000
-    restart: unless-stopped
-    networks:
-      - auto-paint-network
-
-  # Serviço opcional para desenvolvimento com hot reload
-  auto-paint-dev:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    container_name: auto-paint-pro-dev
-    ports:
-      - "3002:3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
-      - ./data:/app/data
+       - "${EXTERNAL_PORT}:${INTERNAL_PORT}"
     environment:
       - NODE_ENV=development
-      - PORT=3000
-    command: npm run dev
+    volumes:
+      - ./data:/app/data
+      - /app/node_modules
     restart: unless-stopped
     networks:
       - auto-paint-network
-    profiles:
-      - dev
-
+      
 networks:
   auto-paint-network:
     driver: bridge
-
-volumes:
-  auto_paint_data:
-    driver: local
